src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <label>Account Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Invoice_Recipients__c</fullName>
        <label>Additional Invoice Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Appirio_DSM_Expiration_Date__c</fullName>
        <label>Appirio DSM Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appirio_DSM_Status__c</fullName>
        <label>Appirio DSM Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Support / Free User</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Average_Blended_Rate_Last_Year__c</fullName>
        <label>Average Blended Rate Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Blended_Rate_This_Year__c</fullName>
        <label>Average Blended Rate This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Blended_Rate_del__c</fullName>
        <formula>Total_Average_Blended_Rate__c  /  Total_10K_Services_Invoice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Blended Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Address__c</fullName>
        <label>Bank Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Became_Client_On_date__c</fullName>
        <label>Became Client On date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Code__c</fullName>
        <inlineHelpText>Unique 6 digit code assigned to Customers that is used when generating Invoices</inlineHelpText>
        <label>Billing Code</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Current_Tier__c</fullName>
        <label>Current Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Everest</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Use_of_3rd_Party_SFDC_Resources__c</fullName>
        <label>Current Use of 3rd-Party SFDC Resources</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Invoice_Email_Template__c</fullName>
        <label>Custom Invoice Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Standards__c</fullName>
        <label>Delivery Standards</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Documentation_Provided__c</fullName>
        <label>Documentation Provided</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DoubleClick_Status__c</fullName>
        <label>DoubleClick Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not A Subscriber</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Current Subscriber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Subscriber</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Blended_Rate_Last_Year__c</fullName>
        <label>Effective Blended Rate Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Effective_Blended_Rate_This_Year__c</fullName>
        <label>Effective Blended Rate This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Effective_Blended_Rate__c</fullName>
        <formula>Total_Effective_Blended_Rate__c  /  Total_10K_Services_Invoice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Blended Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_Last_Year__c</fullName>
        <label>Gross Margin Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_This_Year__c</fullName>
        <label>Gross Margin This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>If_How_To_Log_Time_In_Their_System__c</fullName>
        <label>If/How To Log Time In Their System</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Indian_Financial_Services_Code__c</fullName>
        <label>Indian Financial Services Code</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Invoicing_Notes__c</fullName>
        <label>Invoicing Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Margin_Dollars__c</fullName>
        <formula>Total_Margin_Dollars__c / Total_10K_Services_Invoice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>Total_Margin__c / Total_10K_Services_Invoice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Most_Recent_Billing_Period_End_Date__c</fullName>
        <label>Most Recent Billing Period End Date</label>
        <summarizedField>Invoice__c.Billing_Period_End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.Type__c</field>
            <operation>equals</operation>
            <value>Actual</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>10K Services Invoice</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_of_Employees_Focused_on_Salesforce__c</fullName>
        <label>Num of Employees Focused on Salesforce</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Tier__c</fullName>
        <label>Partner Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Global Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Meeting_Tool__c</fullName>
        <label>Preferred Meeting Tool</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Primary_Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Billing Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Contact that is associated to this Account</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <infoMessage>Only Contacts that belong to this Account are shown</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_And_Requirement_Management_Tools__c</fullName>
        <label>Project And Requirement Management Tools</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QuickBooks_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Set automatically when the Account is created in QuickBooks</inlineHelpText>
        <label>QuickBooks Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QuickBooks_Vendor_Id__c</fullName>
        <externalId>true</externalId>
        <label>QuickBooks Vendor Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Received_W9__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received W9</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Picklist__c</fullName>
        <globalPicklist>Region</globalPicklist>
        <label>Region</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_Security_Personnel_Information__c</fullName>
        <label>Required Security/Personnel Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Edition__c</fullName>
        <label>Salesforce Edition</label>
        <picklist>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesforce_Products_Used__c</fullName>
        <label>Salesforce Products Used</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wave Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SalesforceIQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SteelBrick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pardot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desk.com</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Service_Status_Active_Date__c</fullName>
        <label>Service Status Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Status_Former_Date__c</fullName>
        <label>Service Status Former Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services_Status__c</fullName>
        <label>Services Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signed_NDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed NDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Taxpayer_Identification_Number_TIN__c</fullName>
        <label>Taxpayer Identification Number (TIN)</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>TotalOutstandingInvoices0_30DaysOverdue__c</fullName>
        <label>Outstanding Invoices 0-30 Days Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalOutstandingInvoices31_60DaysOverdue__c</fullName>
        <label>Outstanding Invoices 31-60 Days Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalOutstandingInvoices61_90DaysOverdue__c</fullName>
        <label>Outstanding Invoices 61-90 Days Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_10K_Services_Invoice__c</fullName>
        <label>Total 10K Services Invoice</label>
        <summaryFilterItems>
            <field>Invoice__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>10K Services Invoice</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Average_Blended_Rate__c</fullName>
        <label>Total Average Blended Rate</label>
        <summarizedField>Invoice__c.Average_Blended_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>10K Services Invoice</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Credits_Last_Year__c</fullName>
        <label>Total Credits Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Credits_This_Year__c</fullName>
        <label>Total Credits This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discounts_Last_Year__c</fullName>
        <label>Total Discounts Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discounts_This_Year__c</fullName>
        <label>Total Discounts This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Effective_Blended_Rate__c</fullName>
        <label>Total Effective Blended Rate</label>
        <summarizedField>Invoice__c.Effective_Blended_Rate__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>10K Services Invoice</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Goodwill_Last_Year__c</fullName>
        <label>Total Goodwill Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Goodwill_This_Year__c</fullName>
        <label>Total Goodwill This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Previous_Year__c</fullName>
        <label>Total Invoiced Previous Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_This_Year__c</fullName>
        <label>Total Invoiced This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Margin_Dollars__c</fullName>
        <label>Total Margin $</label>
        <summarizedField>Invoice__c.Profit_Margin__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>10K Services Invoice</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Margin__c</fullName>
        <label>Total Margin %</label>
        <summarizedField>Invoice__c.Margin__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>10K Services Invoice</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Outstanding_Invoices__c</fullName>
        <label>Total Outstanding Invoices</label>
        <summarizedField>Invoice__c.Outstanding_Balance__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>10K Product Invoice, 10K Services Invoice</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Outstanding_Overdue_Invoices__c</fullName>
        <formula>TotalOutstandingInvoices_90DaysOverdue__c  +  TotalOutstandingInvoices0_30DaysOverdue__c  +  TotalOutstandingInvoices31_60DaysOverdue__c  +  TotalOutstandingInvoices61_90DaysOverdue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Outstanding Overdue Invoices</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Paid_Previous_Year__c</fullName>
        <label>Total Paid Previous Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Paid_This_Year__c</fullName>
        <label>Total Paid This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Profit_Last_Year__c</fullName>
        <label>Total Profit Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Profit_This_Year__c</fullName>
        <label>Total Profit This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_type_of_help_are_you_looking_for__c</fullName>
        <label>What type of help are you looking for?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X10K_DSM_Status__c</fullName>
        <label>10K DSM Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Yet Introduced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Introduced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has 10K Paperwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted - DSM Subscriber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Converted - Migrating Off DSM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>Active_Client_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Account_Status__c</columns>
        <columns>Most_Recent_Billing_Period_End_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <filters>
            <field>Most_Recent_Billing_Period_End_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:6</value>
        </filters>
        <label>Active Client Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Current_Clients</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Primary_Billing_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Current Clients</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Delivery_Partner</fullName>
        <active>true</active>
        <label>Delivery Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Direct_Client</fullName>
        <active>true</active>
        <label>Direct Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Client</fullName>
        <active>true</active>
        <label>Partner Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Client_Delivery_Partner</fullName>
        <active>true</active>
        <label>Partner Client &amp; Delivery Partner</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>